syntax = "proto3";

option optimize_for = LITE_RUNTIME;

package com.paulmandal.atak.forwarder.protobufs;

option java_outer_classname = "ProtobufRoute";

import "detail/route/route_link.proto";
import "detail/route/link_attr.proto";
import "detail/route/route_info.proto";

message Route {
  repeated RouteLink link = 1;
  LinkAttr linkAttr = 2;
  RouteInfo routeInfo = 3;
}
