syntax = "proto3";

option optimize_for = LITE_RUNTIME;

package com.paulmandal.atak.forwarder.protobufs;

option java_outer_classname = "ProtobufComplexLink";

message MinimalComplexLink {
  string uid = 1;
  string type = 2; // TODO: move to custom bytes + mapping
  string parentCallsign = 3;
  string relation = 4; // TODO: move to custom bytes + mapping
  int32 productionTime = 5; // TODO: move to custom bytes
}
